# brimstone

./: .gitignore  Cargo.toml  README.md  index.html  justfile
docs/: adventure-rpg-plan.md
src/: adventure.rs  art.rs  campaign.rs  content.rs  ecs.rs  lib.rs  main.rs  settings.rs  state.rs  systems.rs  theme.rs  tuning.rs
src/ecs/: components.rs  resources.rs
src/systems/: common.rs  editor.rs  input.rs  lifecycle.rs  screens.rs  story.rs  world.rs
src/systems/screens/: cutscene.rs  hud.rs  level_select.rs  menu_button.rs  mission_select.rs  pause.rs  title.rs
src/systems/world/: audio.rs  billboard.rs  enemies.rs  flash.rs  fx.rs  game.rs  level.rs  overworld.rs  pickups.rs  player.rs  projectiles.rs  textures.rs  viewmodel.rs  weapon.rs
